--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "cnchar-all": "^2.0.4",
+    "iconv-lite": "^0.5.0",
     "nodejieba": "^2.3.3",
-    "pinyin": "^2.9.0"
+    "pinyin": "^2.9.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
