--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,12 @@
           "node": "current"
         }
       }
-    ]
+    ],
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ],
   "sourceMaps": "inline",
   "retainLines": true
