--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "isolatedModules": true,
     // Import non-ES modules as default imports.
     "esModuleInterop": true,
+    // https://mariusschulz.com/blog/importing-json-modules-in-typescript
+    "resolveJsonModule": true,
     // https://www.detroitlabs.com/blog/2018/02/28/adding-custom-type-definitions-to-a-third-party-library/
     "typeRoots": [
       "./@types",
