--- a/package.json
+++ b/package.json
@@ -13,31 +13,51 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/inquirer": "^6.5.0",
-    "cheerio": "^1.0.0-rc.3",
-    "cnchar-all": "^2.0.6",
-    "iconv-lite": "^0.5.0",
-    "inquirer": "^7.1.0",
-    "nodejieba": "^2.3.3",
-    "pinyin": "^2.9.0",
-    "prompt": "^1.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "@types/inquirer": "^9.0.7",
+    "cheerio": "^1.0.0",
+    "cnchar": "^3.2.6",
+    "cnchar-all": "^3.2.6",
+    "cnchar-code": "^3.2.6",
+    "cnchar-draw": "^3.2.6",
+    "cnchar-explain": "^3.2.6",
+    "cnchar-idiom": "^3.2.6",
+    "cnchar-info": "^3.2.6",
+    "cnchar-input": "^3.2.6",
+    "cnchar-name": "^3.2.6",
+    "cnchar-order": "^3.2.6",
+    "cnchar-poly": "^3.2.6",
+    "cnchar-radical": "^3.2.6",
+    "cnchar-random": "^3.2.6",
+    "cnchar-trad": "^3.2.6",
+    "cnchar-types": "^3.2.6",
+    "cnchar-voice": "^3.2.6",
+    "cnchar-words": "^3.2.6",
+    "cnchar-xhy": "^3.2.6",
+    "iconv-lite": "^0.6.3",
+    "inquirer": "^12.3.0",
+    "nodejieba": "^3.4.4",
+    "pinyin": "^3.1.0",
+    "prompt": "^1.3.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/node": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-typescript": "^7.7.4",
-    "@types/cheerio": "^0.22.15",
-    "@types/pinyin": "^2.8.1",
-    "@types/request": "^2.48.3",
-    "@types/request-promise": "^4.1.45",
-    "nodemon": "^2.0.1",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/node": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/cheerio": "^0.22.35",
+    "@types/pinyin": "^2.10.2",
+    "@types/request": "^2.48.12",
+    "@types/request-promise": "^4.1.51",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  },
+  "resolutions": {
+    "pinyin/nodejieba": "^3.4.4"
   }
 }
